--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -12,8 +12,25 @@
     <title>CRUD App</title>
 </head>
 <body>
+    
+   
     <div class="container">
-
+        <nav class="grey darken-3">
+            <div class="nav-wrapper container">
+            
+            <a href="/" class="brand-logo center"> User Management App </a>
+            <a href="#" data-target="mobile-demo" class="sidenav-trigger show-on-large">
+               <i class="fas fa-bars"></i>
+            </a>
+            <ul class="sidenav" id="mobile-demo">
+            
+            <li><a href="/">Home</a></li>
+            <li><a href="/create-user">New User</a></li>
+            
+            </ul>
+            
+            </div>
+            </nav>
         <%- body %>
     </div>
     
@@ -27,6 +44,10 @@
 
     <script>
          M.Sidenav.init(document.querySelector('.sidenav'))
+         M.FormSelect.init(document.querySelector('#status'))
+         M.FormSelect.init(document.querySelector('#gender'))
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+     <script src="/main.js"></script>
 </body>
 </html>
