--- a/views/create_User.ejs
+++ b/views/create_User.ejs
@@ -8,14 +8,14 @@
             <div class="row mt-4">
                 <div class="input-field">
             
-                    <input type="text" name="username" id="username" >
+                    <input type="text" style="color: aliceblue;" name="username" id="username" >
                     <label for="username">Username</label>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field">
             
-                    <input type="email" name="email" id="email" > 
+                    <input type="email" style="color: aliceblue;" name="email" id="email" > 
                     <label for="email">Email</label>
                 </div>
             </div>
